# syncropel-registry-core

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/syncropel_registry_core/: __init__.py  constants.py  crystallization.py  hashing.py  namespaces.py  trust.py
src/syncropel_registry_core/models/: __init__.py  governance.py  sct.py
src/syncropel_registry_core/sct/: __init__.py  helpers.py
src/syncropel_registry_core/validators/: __init__.py  governance.py
tests/: test_crystallization.py  test_hashing.py  test_models.py  test_namespaces.py  test_sct_helpers.py  test_trust.py  test_validators.py
